# earshot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml
pytest/: captureBasic.py  centroidAdapt.py  centroidMatching.py  cfgLoads.py  cfgRejectsInvalid.py  nativeImports.py
pytest/assets/: invalidCfg.yaml  validCfg.yaml
src/: centroids.py  cfg.py  core.py  display.py  enroll.py  inference.py  log.py  main.py  models.py  translation.py
src/_native/: __init__.py
src/native/audio/: CMakeLists.txt  bindings.cpp  enumerate.cpp  enumerate.hpp  pcm.hpp  resampler.cpp  resampler.hpp  ringBuf.hpp  wasapiCapture.cpp  wasapiCapture.hpp  windower.cpp  windower.hpp
