[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "earshot"
version = "0.1.0"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [{ name = "Michal Kozel", email = "michaelkozel@proton.me" }]

dependencies = [
	"numpy>=1.26",
	"pyyaml>=6.0",
	"loguru>=0.7",
	"httpx>=0.27",
	"rich>=13.7",
	"torch>=2.5",
	"pyannote.audio>=3.3",
	"faster-whisper>=1.1",
	"nemo-toolkit[asr]>=2.0",
	"clearvoice>=0.1",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"ruff>=0.6",
]

[project.scripts]
earshot = "src.main:main"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.27"
cmake.build-type = "Release"
cmake.args = ["-GNinja", "-DCMAKE_CXX_COMPILER=clang-cl"]
wheel.packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["N802", "N803", "N806", "N815", "N816"]

[tool.ruff.format]
indent-style = "tab"

[tool.pytest.ini_options]
testpaths = ["pytest"]
python_files = ["*.py"]
